Move and refactor processing/pipeline functionality

--- a/examples/preprocessing.ipynb
+++ b/examples/preprocessing.ipynb
@@ -4,14 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AUDIOMATE Preprocessing"
+    "# AUDIOMATE Processing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/matthi/Repos/pingu/.venv/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -22,7 +33,7 @@
     "\n",
     "import audiomate\n",
     "from audiomate.corpus import assets\n",
-    "from audiomate.corpus.preprocessing.pipeline import offline"
+    "from audiomate.processing import pipeline"
    ]
   },
   {
@@ -55,6 +66,7 @@
    "outputs": [],
    "source": [
     "feature_path = 'output/mel_features.h5py'\n",
+    "feature_online_path = 'output/mel_features_online.h5py'\n",
     "\n",
     "frame_size = 1024\n",
     "hop_size = 512\n",
@@ -65,25 +77,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to compute the features with deltas multiple steps have to be executed. These steps are arranged in a pipeline using the `parent` and `parents` attributes of the different steps. The steps itself mostly just wrap corresponding functions of the `librosa` library. The steps of the `offline` module are used. This means that the utterances are processed at once (The full utterance is loaded into memory)."
+    "In order to compute the features with deltas multiple steps have to be executed. These steps are arranged in a pipeline using the `parent` and `parents` attributes of the different steps. The steps itself mostly just wrap corresponding functions of the `librosa` library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mel_extractor = pipeline.MelSpectrogram(n_mels=60)\n",
+    "power_to_db = pipeline.PowerToDb(ref=np.max, parent=mel_extractor)\n",
+    "deltas = pipeline.Delta(parent=power_to_db)\n",
+    "stack = pipeline.Stack(parents=[power_to_db, deltas])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have defined the pipeline. Now we can execute some processing function on the last step to execute the full pipeline. The default methods are running in offline mode. This means all frames of an utterance are processed at once."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/matthi/Repos/pingu/.venv/lib/python3.6/site-packages/scipy/signal/_savitzky_golay.py:135: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
+      "  coeffs, _, _, _ = lstsq(A, y)\n"
+     ]
+    }
+   ],
    "source": [
-    "mel_extractor = offline.MelSpectrogram(n_mels=60)\n",
-    "power_to_db = offline.PowerToDb(ref=np.max, parent=mel_extractor)\n",
-    "deltas = offline.Delta(parent=power_to_db)\n",
-    "stack = offline.Stack(parents=[power_to_db, deltas])\n",
-    "\n",
     "feat_container = stack.process_corpus(urbansound8k_subset, \n",
     "                                      feature_path, \n",
     "                                      frame_size=frame_size, \n",
     "                                      hop_size=hop_size, \n",
     "                                      sr=sampling_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To process the frames in streaming mode, we have to use the corresponding `_online` method. Now we can define via ``chunk_size`` how much frames at a time are processed. Depending on the pipeline steps we can define if context has to be added for processing. For example when computing deltas some context is required. There is no automatic check implemented if a step is only working in online or offline mode. It is up to the user to apply it correctly. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feat_container = stack.process_corpus_online(urbansound8k_subset, \n",
+    "                                             feature_online_path, \n",
+    "                                             frame_size=frame_size, \n",
+    "                                             hop_size=hop_size, \n",
+    "                                             sr=sampling_rate,\n",
+    "                                             chunk_size=50,\n",
+    "                                             chunk_left_context=10,\n",
+    "                                             chunk_right_context=10)"
    ]
   },
   {
@@ -96,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
