--- a/examples/preprocessing.ipynb
+++ b/examples/preprocessing.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -102,9 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -140,10 +136,7 @@
     "                                             feature_online_path, \n",
     "                                             frame_size=frame_size, \n",
     "                                             hop_size=hop_size, \n",
-    "                                             sr=sampling_rate,\n",
-    "                                             chunk_size=50,\n",
-    "                                             chunk_left_context=10,\n",
-    "                                             chunk_right_context=10)"
+    "                                             sr=sampling_rate)"
    ]
   },
   {
