Move label-list-idx constants to audiomate.corpus

--- a/examples/corpus.ipynb
+++ b/examples/corpus.ipynb
@@ -194,7 +194,7 @@
     "ten_utterances = list(esc50_corpus.utterances.values())[:10]\n",
     "\n",
     "for utterance in ten_utterances:\n",
-    "    label = utterance.label_lists['default'][0].value\n",
+    "    label = utterance.label_lists[audiomate.corpus.LL_SOUND_CLASS][0].value\n",
     "    print('{:<20} {:.2f}s    {}'.format(utterance.idx, utterance.duration, label))"
    ]
   },
@@ -232,7 +232,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "name": "stdout",
@@ -256,7 +256,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
