--- a/examples/preprocessing.ipynb
+++ b/examples/preprocessing.ipynb
@@ -175,7 +175,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -210,7 +210,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -245,7 +245,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -267,7 +267,7 @@
     "        features_of_utterance = feat_container.get(utterance.idx, mem_map=False)\n",
     "                \n",
     "        print('{} ({}) ({} s)'.format(utterance.idx, \n",
-    "                                    utterance.label_lists['default'][0].value,\n",
+    "                                    utterance.label_lists[audiomate.corpus.LL_SOUND_CLASS][0].value,\n",
     "                                    utterance.duration))\n",
     "        print('-'*100)\n",
     "        \n",
