--- a/examples/feeding.ipynb
+++ b/examples/feeding.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "import audiomate\n",
     "from audiomate import corpus\n",
-    "from audiomate.corpus import assets\n",
+    "from audiomate import containers\n",
     "from audiomate.utils import units"
    ]
   },
@@ -133,8 +133,8 @@
    "source": [
     "from audiomate import feeding\n",
     "\n",
-    "input_container = assets.FeatureContainer('output/mel_features.hdf5')\n",
-    "target_container = assets.Container('output/targets.hdf5')\n",
+    "input_container = containers.FeatureContainer('output/mel_features.hdf5')\n",
+    "target_container = containers.Container('output/targets.hdf5')\n",
     "\n",
     "input_container.open()\n",
     "target_container.open()\n",
@@ -210,8 +210,8 @@
    "source": [
     "from audiomate import feeding\n",
     "\n",
-    "input_container = assets.FeatureContainer('output/mel_features.hdf5')\n",
-    "target_container = assets.Container('output/targets.hdf5')\n",
+    "input_container = containers.FeatureContainer('output/mel_features.hdf5')\n",
+    "target_container = containers.Container('output/targets.hdf5')\n",
     "\n",
     "input_container.open()\n",
     "target_container.open()\n",
@@ -261,13 +261,63 @@
    "source": [
     "from audiomate import feeding\n",
     "\n",
-    "input_container = assets.FeatureContainer('output/mel_features.hdf5')\n",
-    "target_container = assets.Container('output/targets.hdf5')\n",
+    "input_container = containers.FeatureContainer('output/mel_features.hdf5')\n",
+    "target_container = containers.Container('output/targets.hdf5')\n",
     "\n",
     "input_container.open()\n",
     "target_container.open()\n",
     "\n",
     "utt_dataset = feeding.UtteranceDataset(urbansound8k_subset, [input_container, target_container], pad=True)\n",
+    "\n",
+    "# Get a sample (input-feats-utt-1, len-input-feats-utt-1, targets-utt-1, len-target-utt-1)\n",
+    "sample = utt_dataset[1]\n",
+    "print('Input feature shape: {}'.format(str(sample[0].shape)))\n",
+    "print('Length of the input features: {}'.format(sample[1]))\n",
+    "print('Targets shape: {}'.format(str(sample[2].shape)))\n",
+    "print('Length of the targets: {}'.format(sample[3]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying transformations\n",
+    "For an ``UtteranceDataset``, there is the possibility to apply transformations, when loading data. This can be done using a ``Processor``. As you see in the following example the ``AddContext`` processor is used to to append to every input-frame 2 frames of context to the left and right. Therefore the size of a input-frame increases by a factor of 5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input feature shape: (62, 115)\n",
+      "Length of the input features: 62\n",
+      "Targets shape: (62, 2)\n",
+      "Length of the targets: 62\n"
+     ]
+    }
+   ],
+   "source": [
+    "from audiomate import feeding\n",
+    "\n",
+    "input_container = containers.FeatureContainer('output/mel_features.hdf5')\n",
+    "target_container = containers.Container('output/targets.hdf5')\n",
+    "\n",
+    "input_container.open()\n",
+    "target_container.open()\n",
+    "\n",
+    "input_transform = pipeline.AddContext(left_frames=2, right_frames=2)\n",
+    "\n",
+    "utt_dataset = feeding.UtteranceDataset(\n",
+    "    urbansound8k_subset, \n",
+    "    [input_container, target_container], \n",
+    "    pad=True,\n",
+    "    transform=[input_transform, None]\n",
+    ")\n",
     "\n",
     "# Get a sample (input-feats-utt-1, len-input-feats-utt-1, targets-utt-1, len-target-utt-1)\n",
     "sample = utt_dataset[1]\n",
