--- a/examples/validation.ipynb
+++ b/examples/validation.ipynb
@@ -15,7 +15,6 @@
    "outputs": [],
    "source": [
     "import audiomate\n",
-    "from audiomate.corpus import assets\n",
     "from audiomate.corpus import io\n",
     "from audiomate.corpus import validation"
    ]
@@ -93,7 +92,7 @@
    ],
    "source": [
     "val = validation.UtteranceTranscriptionRatioValidator(max_characters_per_second=6, \n",
-    "                                                    label_list_idx=assets.LL_WORD_TRANSCRIPT)\n",
+    "                                                    label_list_idx=audiomate.corpus.LL_WORD_TRANSCRIPT)\n",
     "\n",
     "result = val.validate(corpus)\n",
     "print(result.get_report())"
@@ -149,10 +148,14 @@
    ],
    "source": [
     "val = validation.CombinedValidator(validators=[\n",
-    "    validation.UtteranceTranscriptionRatioValidator(max_characters_per_second=6, \n",
-    "                                                    label_list_idx=assets.LL_WORD_TRANSCRIPT),\n",
-    "    validation.LabelCountValidator(min_number_of_labels=1,\n",
-    "                                   label_list_idx=assets.LL_WORD_TRANSCRIPT)\n",
+    "    validation.UtteranceTranscriptionRatioValidator(\n",
+    "        max_characters_per_second=6, \n",
+    "        label_list_idx=audiomate.corpus.LL_WORD_TRANSCRIPT\n",
+    "    ),\n",
+    "    validation.LabelCountValidator(\n",
+    "        min_number_of_labels=1,\n",
+    "        label_list_idx=audiomate.corpus.LL_WORD_TRANSCRIPT\n",
+    "    )\n",
     "])\n",
     "\n",
     "result = val.validate(corpus)\n",
