--- a/examples/validation.ipynb
+++ b/examples/validation.ipynb
@@ -81,12 +81,16 @@
       "\n",
       "Result: Failed\n",
       "\n",
-      "Invalid utterances:\n",
+      "Invalid Utterances:\n",
       "    * 2_theo_34 (6.211180124223603)\n",
       "    * 6_nicolas_23 (6.172839506172839)\n",
       "    * 6_nicolas_35 (6.177606177606178)\n",
       "    * 6_nicolas_7 (6.962576153176675)\n",
-      "    * 6_nicolas_9 (6.354249404289119)\n"
+      "    * 6_nicolas_9 (6.354249404289119)\n",
+      "    * 6_yweweler_1 (6.39488409272582)\n",
+      "    * 6_yweweler_10 (6.1443932411674345)\n",
+      "    * 6_yweweler_17 (6.182380216383307)\n",
+      "    * 6_yweweler_3 (6.968641114982579)\n"
      ]
     }
    ],
@@ -135,12 +139,16 @@
       "\n",
       "Result: Failed\n",
       "\n",
-      "Invalid utterances:\n",
+      "Invalid Utterances:\n",
       "    * 2_theo_34 (6.211180124223603)\n",
       "    * 6_nicolas_23 (6.172839506172839)\n",
       "    * 6_nicolas_35 (6.177606177606178)\n",
       "    * 6_nicolas_7 (6.962576153176675)\n",
       "    * 6_nicolas_9 (6.354249404289119)\n",
+      "    * 6_yweweler_1 (6.39488409272582)\n",
+      "    * 6_yweweler_10 (6.1443932411674345)\n",
+      "    * 6_yweweler_17 (6.182380216383307)\n",
+      "    * 6_yweweler_3 (6.968641114982579)\n",
       "\n",
       "\n"
      ]
@@ -179,9 +187,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
