--- a/examples/encoding.ipynb
+++ b/examples/encoding.ipynb
@@ -96,7 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['jackhammer', 'dog_bark']\n"
+      "['dog_bark', 'jackhammer']\n"
      ]
     }
    ],
@@ -138,16 +138,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]\n",
-      " [0. 1.]]\n"
+      "[[1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]\n",
+      " [1. 0.]]\n"
      ]
     }
    ],
@@ -177,9 +177,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
